crates/weaver-editor-core/src/writer/snapshots/weaver_editor_core__writer__tests__soft_break.snap
---
source: crates/weaver-editor-core/src/writer/tests.rs
expression: output
---
html_segments:
  - "<p id=\"p-0-n0\" dir=\"ltr\">line one<br />​line two</p>"
paragraph_ranges:
  - byte_start: 0
    byte_end: 17
    char_start: 0
    char_end: 17
offset_maps:
  - - byte_range: 0..0
      char_range: 0..0
      node_id: p-0-n0
      char_offset_in_node: 0
      utf16_len: 0
    - byte_range: 0..8
      char_range: 0..8
      node_id: p-0-n0
      char_offset_in_node: 0
      utf16_len: 8
    - byte_range: 8..9
      char_range: 8..9
      node_id: p-0-n0
      char_offset_in_node: 8
      utf16_len: 1
    - byte_range: 9..17
      char_range: 9..17
      node_id: p-0-n0
      char_offset_in_node: 9
      utf16_len: 8
