crates/weaver-editor-core/src/writer/snapshots/weaver_editor_core__writer__tests__text_then_four_enters.snap
---
source: crates/weaver-editor-core/src/writer/tests.rs
expression: output
---
html_segments:
  - "<p id=\"p-0-n0\" dir=\"ltr\">test\n</p>"
  - "<span id=\"p-1-n0\">​\n​</span>"
  - "<span id=\"p-1-n1\">\n​</span>"
paragraph_ranges:
  - byte_start: 0
    byte_end: 5
    char_start: 0
    char_end: 5
  - byte_start: 5
    byte_end: 7
    char_start: 5
    char_end: 7
  - byte_start: 7
    byte_end: 8
    char_start: 7
    char_end: 8
offset_maps:
  - - byte_range: 0..0
      char_range: 0..0
      node_id: p-0-n0
      char_offset_in_node: 0
      utf16_len: 0
    - byte_range: 0..4
      char_range: 0..4
      node_id: p-0-n0
      char_offset_in_node: 0
      utf16_len: 4
    - byte_range: 4..5
      char_range: 4..5
      node_id: p-0-n0
      char_offset_in_node: 4
      utf16_len: 1
  - - byte_range: 5..6
      char_range: 5..6
      node_id: p-1-n0
      char_offset_in_node: 0
      utf16_len: 1
    - byte_range: 6..7
      char_range: 6..7
      node_id: p-1-n0
      char_offset_in_node: 1
      utf16_len: 2
  - - byte_range: 7..8
      char_range: 7..8
      node_id: p-1-n1
      char_offset_in_node: 0
      utf16_len: 2
