crates/weaver-editor-core/src/writer/snapshots/weaver_editor_core__writer__tests__two_paragraphs_trailing.snap
---
source: crates/weaver-editor-core/src/writer/tests.rs
expression: output
---
html_segments:
  - "<p id=\"p-0-n0\" dir=\"ltr\">first\n</p>"
  - "<span id=\"p-1-n0\">​</span><p id=\"p-1-n1\" dir=\"ltr\">second\n</p>"
  - "<span id=\"p-2-n0\">\n​</span>"
paragraph_ranges:
  - byte_start: 0
    byte_end: 6
    char_start: 0
    char_end: 6
  - byte_start: 6
    byte_end: 14
    char_start: 6
    char_end: 14
  - byte_start: 14
    byte_end: 15
    char_start: 14
    char_end: 15
offset_maps:
  - - byte_range: 0..0
      char_range: 0..0
      node_id: p-0-n0
      char_offset_in_node: 0
      utf16_len: 0
    - byte_range: 0..5
      char_range: 0..5
      node_id: p-0-n0
      char_offset_in_node: 0
      utf16_len: 5
    - byte_range: 5..6
      char_range: 5..6
      node_id: p-0-n0
      char_offset_in_node: 5
      utf16_len: 1
  - - byte_range: 6..7
      char_range: 6..7
      node_id: p-1-n0
      char_offset_in_node: 0
      utf16_len: 1
    - byte_range: 7..7
      char_range: 7..7
      node_id: p-1-n1
      char_offset_in_node: 0
      utf16_len: 0
    - byte_range: 7..13
      char_range: 7..13
      node_id: p-1-n1
      char_offset_in_node: 0
      utf16_len: 6
    - byte_range: 13..14
      char_range: 13..14
      node_id: p-1-n1
      char_offset_in_node: 6
      utf16_len: 1
  - - byte_range: 14..15
      char_range: 14..15
      node_id: p-2-n0
      char_offset_in_node: 0
      utf16_len: 2
