crates/weaver-editor-core/src/writer/snapshots/weaver_editor_core__writer__tests__wikilink_partial_inside_full.snap
---
source: crates/weaver-editor-core/src/writer/tests.rs
expression: output
---
html_segments:
  - "<p id=\"p-0-n0\" dir=\"ltr\">[[outer<span class=\"md-syntax-inline\" data-syn-id=\"s0\" data-char-start=\"7\" data-char-end=\"9\">[[</span><a class=\"link\" href=\"inner\">inner</a><span class=\"md-syntax-inline\" data-syn-id=\"s1\" data-char-start=\"14\" data-char-end=\"16\" spellcheck=\"false\">]]</span>outer]]</p>"
paragraph_ranges:
  - byte_start: 0
    byte_end: 23
    char_start: 0
    char_end: 23
offset_maps:
  - - byte_range: 0..0
      char_range: 0..0
      node_id: p-0-n0
      char_offset_in_node: 0
      utf16_len: 0
    - byte_range: 0..1
      char_range: 0..1
      node_id: p-0-n0
      char_offset_in_node: 0
      utf16_len: 1
    - byte_range: 1..2
      char_range: 1..2
      node_id: p-0-n0
      char_offset_in_node: 1
      utf16_len: 1
    - byte_range: 2..7
      char_range: 2..7
      node_id: p-0-n0
      char_offset_in_node: 2
      utf16_len: 5
    - byte_range: 7..9
      char_range: 7..9
      node_id: p-0-n0
      char_offset_in_node: 7
      utf16_len: 2
    - byte_range: 9..14
      char_range: 9..14
      node_id: p-0-n0
      char_offset_in_node: 9
      utf16_len: 5
    - byte_range: 14..16
      char_range: 14..16
      node_id: p-0-n0
      char_offset_in_node: 14
      utf16_len: 2
    - byte_range: 16..21
      char_range: 16..21
      node_id: p-0-n0
      char_offset_in_node: 16
      utf16_len: 5
    - byte_range: 21..22
      char_range: 21..22
      node_id: p-0-n0
      char_offset_in_node: 21
      utf16_len: 1
    - byte_range: 22..23
      char_range: 22..23
      node_id: p-0-n0
      char_offset_in_node: 22
      utf16_len: 1
  - []
